# fafnir

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README_ja.md  install.bat
assets/clang/: Toolset.props  Toolset.targets
assets/clang-cl/: Toolset.props  Toolset.targets
scripts/: install.ps1
src/: CMakeLists.txt  custom_api.cpp  custom_api.hpp  dll_main.cpp  fafnir.hpp  filesystem.hpp  main.cpp  set_winver.hpp  unicode.hpp
tests/: CMakeLists.txt  sample_test.cpp  unicode_test.cpp
